@@ -15,6 +15,7 @@ python-apt (0.8.0~exp2) UNRELEASED; urgency=low
   * apt.cache: Document that update() may need an open() (Closes: #622342)
   * apt.cache: Add a fetch_archives() method (Closes: #622347)
   * doc: Fix a minor formatting error, patch by Jakub Wilk (Closes: #608914)
+  * apt.package: Add 'tasks' to Version, improve doc (Closes: #619574)
 
  -- Julian Andres Klode <jak@debian.org>  Wed, 06 Apr 2011 09:46:52 +0200
 
